fix: Remove public modifier [DHIS2-19263]